<resources>
    <string name="app_name">Timetable Reminder</string>
    <string name="add">Add</string>
    <string name="username">ID Number</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="title">Atachiz02 Softwares</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="click_to_signin">Or click here to sign in...</string>
    <string name="icon">icon</string>
    <string name="add_to_timetable">Add to Timetable</string>
    <string name="course_code">Course Code</string>
    <string name="course_title">Course Title</string>
    <string name="id_number">ID Number</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="department">Department</string>
    <string name="level">Level</string>
    <string name="add_profile">Add Profile</string>
    <string name="online">online</string>
    <string name="offline">offline</string>
    <string name="yay">Yay! No upcoming class...</string>
</resources>