<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/addProfilePicture"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:contentDescription="@string/add"
            android:src="@drawable/avatar" />

        <EditText
            android:id="@+id/addID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="username"
            android:hint="@string/id_number"
            android:inputType="text"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/addEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/addName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="username"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/addDepartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:hint="@string/department"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/addLevel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="postalCode"
            android:hint="@string/level"
            android:inputType="textPersonName"
            android:textSize="20sp" />

        <Button
            android:id="@+id/addProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/add_profile" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>